[gd_scene load_steps=6 format=3 uid="uid://byqy3gmm478yp"]

[ext_resource type="Texture2D" uid="uid://bt5ep2bnr2x76" path="res://Misc/SpriteObject/origin.png" id="2_xotqk"]
[ext_resource type="Script" uid="uid://cl5x0rrrxj6ys" path="res://Scripts/Objects/ObjectComponents/follow_component.gd" id="3_7v2q7"]
[ext_resource type="Script" uid="uid://dfriyw4cgss8i" path="res://Scripts/Objects/ObjectComponents/movements.gd" id="8_617re"]
[ext_resource type="Script" uid="uid://dwyy1dflsfctu" path="res://Scripts/Objects/ObjectComponents/reaction_config.gd" id="9_fpp0d"]
[ext_resource type="Script" uid="uid://dfyvj4w18tr1" path="res://Scripts/Misc/AnimatedSpriteTextureScripts/AnimatedSpriteTexture.gd" id="10_lrffp"]

[node name="SpriteObject" type="Node2D" groups=["Sprites"]]
physics_interpolation_mode = 1

[node name="Modifier1" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Modifier" type="Node2D" parent="Modifier1"]
unique_name_in_owner = true

[node name="Origin" type="Sprite2D" parent="Modifier1/Modifier"]
unique_name_in_owner = true
visible = false
z_index = 4096
z_as_relative = false
texture = ExtResource("2_xotqk")

[node name="Animation" type="Timer" parent="."]

[node name="Blink" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="FollowComponent" type="Node" parent="." node_paths=PackedStringArray("modifier")]
script = ExtResource("3_7v2q7")
modifier = NodePath("../Modifier1")

[node name="Movements" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_617re")

[node name="ReactionConfig" type="Node" parent="." node_paths=PackedStringArray("actor", "animation_handler")]
unique_name_in_owner = true
script = ExtResource("9_fpp0d")
actor = NodePath("..")
animation_handler = NodePath("../AnimatedSpriteTexture")

[node name="AnimatedSpriteTexture" type="Node" parent="." node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("10_lrffp")
actor = NodePath("..")
metadata/_custom_type_script = "uid://dfyvj4w18tr1"

[connection signal="visibility_changed" from="." to="FollowComponent" method="_on_sprite_object_visibility_changed"]
[connection signal="visibility_changed" from="." to="Movements" method="_on_sprite_object_visibility_changed"]
